<resources>
    <string name="app_name">Pizza Ordering</string>
    <string name="title_home">Home</string>
    <string name="title_order_history">Order History</string>
    <string name="title_account">Account</string>
    <string name="choose_an_option">Choose an option:</string>
    <string name="our_specialties">Our Specialties</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="build_your_own_pizza_content">Build your own pizza</string>
    <string name="specialties_content">Select from our list of specialties</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza_list_title">Pizza List</string>
    <string name="header_sauce">Sauce</string>
    <string name="header_meat">Meat</string>
    <string name="header_veggies">Veggies</string>
    <string name="generic_item_name">Generic Item Name</string>
    <string name="pizza_image_content_desc">Pizza image</string>
    <string name="view_cart_menu_title">View Cart</string>
    <string name="build_your_own_text">Build Your Own</string>
    <string name="items_header">Your Items:</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="tax_label">Tax:</string>
    <string name="checkout_text">Checkout</string>
    <string name="total_label">Total:</string>
    <string name="minus_sign">-</string>
    <string name="btn_plus_sign">+</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="quantity_initial">1</string>
    <string name="add_to_cart_text">Add to Cart</string>
    <string name="save_text">Save</string>
    <string name="size_label">Size</string>
    <string name="crust_label">Crust</string>
    <string name="quantity_label">Quantity</string>
    <string name="add_to_cart_button">Add to cart</string>
    <string name="choose_pizza_header">Choose pizza size and crust:</string>
    <string name="view_button_text">View</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="pizza_size_content_description">This is a dropdown field to select pizza size</string>
    <string name="pizza_crust_content_description">This is a dropdown field to select pizza crust</string>

</resources>