<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_an_option"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/build_your_own"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_custom_pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_custom_pizza"
            app:layout_constraintTop_toTopOf="@+id/image_custom_pizza" />

        <ImageView
            android:id="@+id/image_custom_pizza"
            android:layout_width="220dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/build_your_own_pizza_content"
            android:focusableInTouchMode="true"
            android:scaleType="fitXY"
            android:src="@drawable/custom_pizza"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header" />

        <TextView
            android:id="@+id/text_special"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/our_specialties"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_special_pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_special_pizza"
            app:layout_constraintTop_toTopOf="@+id/image_special_pizza" />

        <ImageView
            android:id="@+id/image_special_pizza"
            android:layout_width="220dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/specialties_content"
            android:scaleType="fitXY"
            android:src="@drawable/specialpizza"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_custom_pizza" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>