<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customize_pizza_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/text_customize_pizza_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Choose pizza size and crust:"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pizza_name" />

            <TextView
                android:id="@+id/label_pizza_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_customize_pizza_header" />

            <Spinner
                android:id="@+id/spinner_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_pizza_size"
                app:layout_constraintTop_toTopOf="@+id/label_pizza_size" />

            <TextView
                android:id="@+id/label_pizza_crust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Crust"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_pizza_size" />

            <Spinner
                android:id="@+id/spinner_crust"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/spinner_size"
                app:layout_constraintTop_toTopOf="@+id/label_pizza_crust" />

            <TextView
                android:id="@+id/text_sauce_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/header_sauce"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/sauce_recycler_view"
                app:layout_constraintTop_toBottomOf="@+id/label_pizza_crust" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sauce_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_sauce_title" />

            <TextView
                android:id="@+id/text_meat_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/header_meat"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sauce_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meat_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_meat_title" />

            <TextView
                android:id="@+id/text_veggies_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/header_veggies"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meat_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/veggie_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_veggies_title">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                app:icon="@drawable/ic_add_shopping_cart_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/veggie_recycler_view" />

            <Button
                android:id="@+id/btn_add_pizza"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:text="+"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_add_to_cart"
                app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart" />

            <Button
                android:id="@+id/btn_less_pizza"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="28dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_pizza_qty"
                app:layout_constraintEnd_toStartOf="@+id/text_pizza_qty" />

            <TextView
                android:id="@+id/text_pizza_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="0"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_add_pizza"
                app:layout_constraintEnd_toStartOf="@+id/btn_add_pizza" />

            <TextView
                android:id="@+id/text_pizza_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Pizza Name"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>